<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.github.superedison</groupId>
        <artifactId>java-wallet-sdk</artifactId>
        <version>0.0.2</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>web3-client</artifactId>
    <name>Web3 Wallet Client</name>
    <description>
        High-level client facade for the Web3 Wallet SDK. Integrates Core, Crypto, and Chain modules to provide a unified and simplified API for developers to manage wallets and transactions.
    </description>
    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.github.superedison</groupId>
            <artifactId>web3-chain-spi</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.superedison</groupId>
            <artifactId>web3-core</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.superedison</groupId>
            <artifactId>web3-crypto</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.superedison</groupId>
            <artifactId>web3-chain-evm</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.superedison</groupId>
            <artifactId>web3-chain-btc</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.superedison</groupId>
            <artifactId>web3-chain-tron</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.superedison</groupId>
            <artifactId>web3-chain-solana</artifactId>
            <version>${project.version}</version>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>
